Implement Chapter 4 with DynamoDB